@@ -153,7 +153,6 @@ tasks.withType<Test>().configureEach {
     jvmArgs(
         "--add-opens",
         "java.base/java.util=ALL-UNNAMED",
-        "--add-opens",
         "java.base/java.lang=ALL-UNNAMED",
         "--enable-native-access=ALL-UNNAMED",
     )
